--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Freshman Barbershop | Premium Barbering in Mississauga</title>
-    <meta name="description" content="Experience premium barbering at The Freshman Barbershop in Mississauga. Professional cuts, traditional shaves, chair rentals available. Book your appointment today!" />
-    <meta name="author" content="The Freshman Barbershop" />
-    <meta name="keywords" content="barbershop, Mississauga, haircuts, traditional shave, chair rental, premium barbering, men's grooming" />
-
-    <meta property="og:title" content="The Freshman Barbershop | Premium Barbering in Mississauga" />
-    <meta property="og:description" content="Experience premium barbering at The Freshman Barbershop in Mississauga. Professional cuts, traditional shaves, chair rentals available." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>The Freshmen Barbershop - Best Barbershop in Mississauga</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
